language/move-lang/tests/move_check/typing/implicit_deref_borrow_field_not_copyable.exp
error: 

   ┌── tests/move_check/typing/implicit_deref_borrow_field_not_copyable.move:3:12 ───
   │
 3 │     struct S {}
   │            - Is declared as a non-implicitly copyable type here
 4 │     resource struct B { s: S, r: R }
   │                            - The type: '0x8675309::M::S'
   ·
 7 │         (b.s: S);
   │          ^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access
   │

error: 

   ┌── tests/move_check/typing/implicit_deref_borrow_field_not_copyable.move:2:5 ───
   │
 2 │     resource struct R {}
   │     -------- Is declared as a non-copyable type here
 3 │     struct S {}
 4 │     resource struct B { s: S, r: R }
   │                                  - The type: '0x8675309::M::R'
   ·
 8 │         R{} = b.r;
   │               ^^^ Invalid implicit copy of field 'r'.
   │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_not_copyable.move:3:12 ───
    │
  3 │     struct S {}
    │            - Is declared as a non-implicitly copyable type here
  4 │     resource struct B { s: S, r: R }
    │                            - The type: '0x8675309::M::S'
    ·
 10 │         (bref.s: S);
    │          ^^^^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access
    │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_not_copyable.move:2:5 ───
    │
  2 │     resource struct R {}
    │     -------- Is declared as a non-copyable type here
  3 │     struct S {}
  4 │     resource struct B { s: S, r: R }
    │                                  - The type: '0x8675309::M::R'
    ·
 11 │         R{} = bref.r;
    │               ^^^^^^ Invalid implicit copy of field 'r'.
    │

